gcc-14.2.0/gcc/testsuite/gdc.test/compilable/extra-files/emptymain.d
version https://git-lfs.github.com/spec/v1
oid sha256:0480152b4685a46642fbd8a8cffe80fc6c7fa465db6411d0c783227bbfd6a529
size 15
